# survey-pulse-app

./: .gitignore
survey_generator_project/: manage.py  pyproject.toml
survey_generator_project/apis_v1/: urls.py
survey_generator_project/apis_v1/exceptions/: __init__.py  not_found_exception.py
survey_generator_project/apis_v1/migrations/: 0001_initial.py  0002_alter_sectionmodel_title.py
survey_generator_project/apis_v1/models/: __init__.py  answer_model.py  base_model.py  choice_model.py  question_group_model.py  question_model.py  section_model.py  survey_model.py
survey_generator_project/apis_v1/serializers/: __init__.py  answer_serializer.py  choice_serializer.py  question_group_serializer.py  question_serializer.py  section_serializer.py  survey_serializer.py  user_serializer.py
survey_generator_project/apis_v1/viewsets/: __init__.py  answer_viewset.py  base_viewset.py  choice_viewset.py  question_group_viewset.py  question_viewset.py  section_viewset.py  survey_viewset.py
survey_generator_project/survey_generator_project/: asgi.py  settings.py  urls.py  wsgi.py
survey_pulse_ui/: package.json
survey_pulse_ui/src/: App.vue  router.ts  vite-env.d.ts
survey_pulse_ui/src/components/: Footer.vue  Header.vue  HomeView.vue  index.ts
survey_pulse_ui/src/components/admin/surveys/: Survey.vue
